k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: magiccollection
  labels:
    name: magiccollection
