k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magic-collection
  namespace: magiccollection
  labels:
    app: magic-collection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magic-collection
  template:
    metadata:
      labels:
        app: magic-collection
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: magic-collection
          image: ghcr.io/biestervictor/mtg-collection:dev-0.1.8
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5
