k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magic-collection-service
  namespace: magiccollection
spec:
  type: ClusterIP
  selector:
    app: magic-collection
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
