k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magic-collection-ingress
  namespace: magiccollection
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/location-snippet: |
      client_max_body_size 0;
      client_body_buffer_size 64m;
      proxy_read_timeout 600s;
      proxy_send_timeout 600s;
spec:
  ingressClassName: nginx
  rules:
    - host: mtg-kubitos.biester.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: magic-collection-service
                port:
                  number: 80
